feat: CRUD gastos e categorias principais nas migrations

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,9 +9,9 @@ server.error.include-stacktrace=never
 logging.level.org.springframework=DEBUG
 
 # === POSTGRESQL CONFIG ===
-spring.datasource.url=jdbc:postgresql://localhost:5433/db_minhaCarteira?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_minhaCarteira?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=postgres
-spring.datasource.password=xswcde122123
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA ===
