fix: added dependency of keyclock

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>26.0.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
