--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,26 @@
 jwt.private.key=classpath:private.key
 jwt.public.key=classpath:public.key
 
+server.port=8082
+
+# === KEYCLOCK ===
+keyclock_url=http://localhost:8080/realms/app_spring_sd/protocol/openid-connect/token
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/app_spring_sd
+spring.security.oauth2.resourceserver.jwk-set-uri:${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+# Configurações do Admin Client do Keycloak
+keycloak.admin.server-url=http://localhost:8080
+keycloak.admin.realm=app_spring_sd
+keycloak.admin.client-id=app_write
+keycloak.admin.client-secret=YD1UxBBhTTkAyvguCmVMv9hwZeGvE5DI
+
+# (machine-to-machine)
+keycloak.admin.grant-type=client_credentials
+
+# (user-to-machine)
+keycloak.user.grant-type=password
+
+# === UTILS ===
 api.allowed.origins=*
 
 # === CONFIG REST ===
@@ -9,9 +29,9 @@ server.error.include-stacktrace=never
 logging.level.org.springframework=DEBUG
 
 # === POSTGRESQL CONFIG ===
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_minhaCarteira?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://172.25.129.149:5432/db_minhaCarteira
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=xswcde122123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JPA ===
