fix: changed configs

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,4 @@
-# === KEYS ===
-jwt.private.key=classpath:private.key
-jwt.public.key=classpath:public.key
-
+# === SERVER ===
 server.port=8082
 
 # === KEYCLOCK ===
@@ -9,7 +6,7 @@ keyclock_url=http://localhost:8080/realms/app_spring_sd/protocol/openid-connect/
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/app_spring_sd
 spring.security.oauth2.resourceserver.jwk-set-uri:${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
-# Configurações do Admin Client do Keycloak
+# Configuracoes do Admin Client do Keycloak
 keycloak.admin.server-url=http://localhost:8080
 keycloak.admin.realm=app_spring_sd
 keycloak.admin.client-id=app_write
@@ -29,7 +26,7 @@ server.error.include-stacktrace=never
 logging.level.org.springframework=DEBUG
 
 # === POSTGRESQL CONFIG ===
-spring.datasource.url=jdbc:postgresql://172.25.129.149:5432/db_minhaCarteira
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_minhaCarteira
 spring.datasource.username=postgres
 spring.datasource.password=xswcde122123
 spring.datasource.driver-class-name=org.postgresql.Driver
